# mujoco_ros_aarch64

mujoco-2.1.1/lib/: libmujoco.so.2.1.1  libmujoco_nogl.so.2.1.1
mujoco_ros/: CMakeLists.txt  package.xml
